trys to fix background position on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,8 @@ body {
   background-blend-mode: multiply;
   background-size: 100%;
   background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 a:link {
